neutron (2:8.0.0~b1-0ubuntu1) UNRELEASED; urgency=medium

  * d/tests/neutron-agents: Give daemon 5 seconds to start to prevent race.
  * New upstream milestone for OpenStack Mitaka.
  * d/control: Align (build-)depends with upstream.
  * d/p/iproute2-compat.patch: Dropped. Fixed upstream.
  * d/p/drop-ryu-dep.patch: Rebased.

 -- Corey Bryant <corey.bryant@canonical.com>  Wed, 16 Dec 2015 12:25:25 -0500

neutron (2:7.0.0-0ubuntu1) wily; urgency=medium

  * New upstream release for OpenStack Liberty.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 15 Oct 2015 16:38:37 -0400

neutron (2:7.0.0~rc3-0ubuntu1) wily; urgency=medium

  * New upstream release candidate for OpenStack Liberty.
  * d/control: Align dependencies with upstream.

 -- Corey Bryant <corey.bryant@canonical.com>  Wed, 14 Oct 2015 11:49:29 -0400

neutron (2:7.0.0~rc2-0ubuntu2) wily; urgency=medium

  * d/control: Drop neutron-plugin-metaplugin and neutron-plugin-cisco
    binary packages as upstream has moved the core plugins out of tree.
  * d/tests/cisco-plugin: Dropped since plugin is moved out of tree.

 -- Corey Bryant <corey.bryant@canonical.com>  Fri, 09 Oct 2015 09:38:10 -0400

neutron (2:7.0.0~rc2-0ubuntu1) wily; urgency=medium

  * New upstream release candidate for OpenStack Liberty.
  * d/p/fix-neutron-configuration.patch: Rebased.
  * d/p/skip-iptest.patch: Rebased.
  * d/p/iproute2-compat.patch: Rebased.
  * d/p/i386-fwmark.patch: Dropped. Fixed upstream.
  * d/p/binary-metadata.patch: Dropped. Fixed upstream.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 08 Oct 2015 09:42:36 -0400

neutron (2:7.0.0~rc1-0ubuntu5) wily; urgency=medium

  * d/neutron-common.install: Install ebtables filters (LP: #1502363).
  * d/neutron-plugin-openvswitch-agent.{init.in,upstart.in}: Add agent
    specific configuration file to daemon arguments (LP: #1502364).
  * d/neutron-plugin-linuxbridge-agent.init.in: Add agent specific
    configuration file to daemon arguments (LP: #1502362).