@@ -1,1 +1,0 @@
-etc/neutron/plugins/bigswitch/* etc/neutron/plugins/bigswitch
